# A3Note

./: .eslintrc.json  .gitignore  ADVANCED_MEDIA_FEATURES.md  AEROSPACE_BUTTON_FEATURE_COMPLETION.md  AEROSPACE_COMPLETION_PHASE2.md  AEROSPACE_GRADE_AUDIT_REPORT.md  AEROSPACE_GRADE_COMPLETION.md  AEROSPACE_GRADE_COMPLETION_REPORT.md  AEROSPACE_LEVEL_AUDIT.md  AEROSPACE_LEVEL_AUDIT_FINAL.md  AI_FEATURE_ROADMAP.md  AI_IMPLEMENTATION_COMPLETE.md  AI_INTEGRATION_PROPOSAL.md  AI_INTEGRATION_STATUS.md  AI_QUICK_START_GUIDE.md  AI_TESTING_CHECKLIST.md  AUTO_TEST_REPORT.md  BROWSER_MODE.md  CODE_AUDIT_COMPLETE.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_REPORT.md  COMPLETE_EDITOR_AUDIT_AND_FIX.md  COMPLETE_ERROR_FIX.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_MARKDOWN_TEST_GUIDE.md  COMPLETE_SYSTEM_CHECK.md  COMPLETION_ROADMAP.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_FEATURE_AUDIT.md  COMPREHENSIVE_MARKDOWN_EDITOR_COMPLETE.md  COMPREHENSIVE_MARKDOWN_EDITOR_PLAN.md  COMPREHENSIVE_TESTING_GUIDE.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTEXT_MENU_AUDIT.md  CONTEXT_MENU_COMPLETE.md  CONTEXT_MENU_INTEGRATION_COMPLETE.md  CRITICAL_ERROR_FIX.md  DEBUG_INSTRUCTIONS.md  E2E_TESTING_REPORT.md  (+100 more)
docs/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: file_operations.rs
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: ai_commands.rs  commands.rs  commands_test.rs  error.rs  export.rs  export_test.rs  lib.rs  main.rs  media_commands.rs  models.rs  search.rs  semantic_commands.rs  watcher.rs
src-tauri/tests/: integration_test.rs
(+405 files in other folders)
