[package]
name = "a3note"
version = "0.1.0"
description = "A high-performance note-taking application"
authors = ["A3Note Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
notify = "6.1"
pulldown-cmark = "0.11"
tantivy = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
num_cpus = "1.16"

# AI inference dependencies
# Using Ollama HTTP API for inference
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
futures-util = "0.3"
md5 = "0.7"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "file_operations"
harness = false

[lib]
name = "a3note"
path = "src/lib.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
